load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "coordination_config_proto",
    srcs = ["coordination_config.proto"],
)

cc_proto_library(
    name = "coordination_config_cc_proto",
    deps = [":coordination_config_proto"],
)

proto_library(
    name = "coordination_service_proto",
    srcs = ["coordination_service.proto"],
    deps = ["@com_google_protobuf//:any_proto"],
)

cc_proto_library(
    name = "coordination_service_cc_proto",
    deps = [":coordination_service_proto"],
)

cc_grpc_library(
    name = "coordination_service_cc_grpc",
    srcs = [":coordination_service_proto"],
    grpc_only = True,
    deps = [":coordination_service_cc_proto"],
)

proto_library(
    name = "distributed_runtime_payloads_proto",
    srcs = ["distributed_runtime_payloads.proto"],
)

cc_proto_library(
    name = "distributed_runtime_payloads_cc_proto",
    deps = [":distributed_runtime_payloads_proto"],
)

proto_library(
    name = "rpc_options_proto",
    srcs = ["rpc_options.proto"],
)

cc_proto_library(
    name = "rpc_options_cc_proto",
    deps = [":rpc_options_proto"],
)
