# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "coordination_config_proto",
    srcs = ["coordination_config.proto"],
)

cc_proto_library(
    name = "coordination_config_cc_proto",
    deps = [":coordination_config_proto"],
)

proto_library(
    name = "coordination_service_proto",
    srcs = ["coordination_service.proto"],
    deps = ["@com_google_protobuf//:any_proto"],
)

cc_proto_library(
    name = "coordination_service_cc_proto",
    deps = [":coordination_service_proto"],
)

cc_grpc_library(
    name = "coordination_service_cc_grpc",
    srcs = [":coordination_service_proto"],
    grpc_only = True,
    deps = [":coordination_service_cc_proto"],
)

proto_library(
    name = "distributed_runtime_payloads_proto",
    srcs = ["distributed_runtime_payloads.proto"],
)

cc_proto_library(
    name = "distributed_runtime_payloads_cc_proto",
    deps = [":distributed_runtime_payloads_proto"],
)

proto_library(
    name = "rpc_options_proto",
    srcs = ["rpc_options.proto"],
)

cc_proto_library(
    name = "rpc_options_cc_proto",
    deps = [":rpc_options_proto"],
)
